--- a/index.html
+++ b/index.html
@@ -93,13 +93,10 @@
                     </div>
                     <div class="grid md:grid-cols-2 gap-4 mt-4">
                         <div class="p-4 bg-gray-50 rounded-lg border border-dashed border-gray-300">
-                            <h4 class="font-bold text-gray-700 mb-2 underline">Project A</h4>
-                            <p class="text-sm">จาก Google Form -> สรุปข้อมูลลง Sheet -> แจ้งเตือนผ่าน Line Notify</p>
+                            <h4 class="font-bold text-gray-700 mb-2 underline">Wordpress Automation Blog</h4>
+                            <p class="text-sm">จาก Google sheet -> สร้างบทความ -> แจ้งเตือนผ่าน Line Notify</p>
                         </div>
-                        <div class="p-4 bg-gray-50 rounded-lg border border-dashed border-gray-300">
-                            <h4 class="font-bold text-gray-700 mb-2 underline">Project B</h4>
-                            <p class="text-sm">ระบบดูดไฟล์แนบจาก Email ไปเก็บไว้ที่ Google Drive โดยอัตโนมัติ</p>
-                        </div>
+                  
                     </div>
                 </div>
             </div>
